--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 @import "product_style";
 @import "variable";
 @import "catalog_style";
-
+@import "cart_style";
 * {
     margin: 0;
     padding: 0;
