--- a/Style.css
+++ b/Style.css
@@ -20,7 +20,7 @@
   list-style: none;
   margin-bottom: 0;
 }
-.breadcrumb__nav li + li::before {
+.breadcrumb__name:not(:last-child)::after {
   content: "/";
   color: #636363;
   padding-right: 4px;
@@ -36,6 +36,9 @@
   font-weight: 300;
   line-height: normal;
 }
+.breadcrumb__name:hover a {
+  color: #F16D7F;
+}
 .breadcrumb__name__sub {
   color: #F16D7F;
   font-size: 14px;
@@ -44,22 +47,21 @@
   line-height: normal;
 }
 
-.carousel-control-prev-icon {
-  background-image: url(img/prev.svg);
+.slider {
+  padding-top: 10px;
+  padding-bottom: 42px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #F7F7F7;
 }
-
-.carousel-control-next-icon {
-  background-image: url(img/next.svg);
+.slider__btn {
+  padding: 8px;
+  background-color: rgba(42, 42, 42, 0.1490196078);
+  transition: all 0.3s;
 }
-
-.carousel-control-next {
-  opacity: 1;
-  justify-content: flex-end;
-}
-
-.carousel-control-prev {
-  opacity: 1;
-  justify-content: flex-start;
+.slider__btn:hover path {
+  fill: #F16D7F;
 }
 
 .box {
@@ -83,6 +85,7 @@
   padding-top: 64px;
   padding-bottom: 64px;
   margin-bottom: 129px;
+  border: 1px #EAEAEA solid;
 }
 .product__description__subtitle-ping {
   margin-bottom: 12px;
@@ -138,7 +141,7 @@
   width: 212px;
   height: 48.406px;
   flex-shrink: 0;
-  border-color: #F16D7F;
+  border: 1px #F16D7F solid;
   display: flex;
   align-items: center;
   gap: 23px;
@@ -148,7 +151,7 @@
 }
 .product__description__button__text {
   margin-bottom: 0;
-  color: #F26376;
+  color: #F16D7F;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -156,14 +159,18 @@
 }
 .product__description__button:hover {
   background-color: #F16D7F;
-  color: #FFFFFF;
+  color: #FBFBFB;
   border: none;
 }
 .product__description__button:hover .product__description__button__text {
-  color: #FFFFFF;
+  color: #FBFBFB;
 }
 .product__description__button:hover path {
-  fill: #FFFFFF;
+  fill: #FBFBFB;
+}
+
+.top__product {
+  margin-bottom: 128px;
 }
 
 .box__products {
@@ -233,7 +240,68 @@
   line-height: normal;
 }
 
-/* блок photo-subscribe */
+/* Блок для планшета */
+@media (max-width: 1024px) {
+  .box {
+    position: static;
+    margin-bottom: 129px;
+  }
+  .box__products {
+    flex-direction: row-reverse;
+  }
+  .items__products:last-child {
+    display: none;
+  }
+  /* Блок для мобильной версии */
+}
+@media (max-width: 1024px) and (min-width: 320px) and (max-width: 767px) {
+  .breadcrumb {
+    gap: 32px;
+    justify-content: center;
+    padding-top: 24px;
+    padding-bottom: 46px;
+  }
+  .slider {
+    position: relative;
+    padding-top: 85px;
+    padding-bottom: 85px;
+    justify-content: center;
+  }
+  .slider__img img {
+    max-width: 374px;
+    max-height: 454px;
+  }
+  .slider__btn {
+    position: absolute;
+  }
+  .slider__btn_1 {
+    left: 0;
+  }
+  .slider__btn_2 {
+    right: 0;
+  }
+  .product__description {
+    margin-bottom: 64px;
+  }
+  .product__description__text {
+    max-width: 300px;
+  }
+  .product__description__sort {
+    gap: 25px;
+  }
+  .product__description__sort__select {
+    font-size: 10px;
+  }
+  .product__description__sort__svg {
+    width: 175px;
+  }
+  .__subtitle {
+    margin-bottom: 32px;
+  }
+  .top__product {
+    margin-bottom: 64px;
+  }
+}
 summary {
   display: block;
 }
@@ -276,7 +344,7 @@ summary::-webkit-details-marker {
   padding-top: 13px;
 }
 .filter__text {
-  color: #000;
+  color: #222222;
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
@@ -377,11 +445,50 @@ summary::-webkit-details-marker {
   line-height: normal;
 }
 
+/* Блок для планшета */
+@media (max-width: 1024px) {
+  .filter__sort {
+    justify-content: space-between;
+    padding-top: 24px;
+    padding-bottom: 40px;
+  }
+  .box__products {
+    margin-bottom: 40px;
+  }
+  .pagination {
+    margin-bottom: 63px;
+  }
+  /* Блок для мобильной версии */
+}
+@media (max-width: 1024px) and (min-width: 320px) and (max-width: 767px) {
+  .filter__heading {
+    padding-left: 0;
+  }
+  .filter__text {
+    display: none;
+  }
+  .filter__img {
+    width: 37px;
+    height: 25px;
+  }
+  .filter__content {
+    width: 304px;
+  }
+  .sort {
+    gap: 12px;
+  }
+  .sort__name {
+    gap: 9px;
+  }
+  .sort__text {
+    font-size: 12px;
+  }
+}
 .card__checkout {
   padding-top: 96px;
-  margin-bottom: 72px;
   display: flex;
   gap: 128px;
+  padding-bottom: 128px;
 }
 
 .product__cart {
@@ -392,7 +499,6 @@ summary::-webkit-details-marker {
 .product__cart__card {
   display: flex;
   align-items: center;
-  width: 652px;
   box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
 }
 .product__cart__card img {
@@ -401,7 +507,7 @@ summary::-webkit-details-marker {
   margin-right: 32px;
 }
 .product__cart__subtitle {
-  color: #222;
+  color: #222222;
   max-width: 262px;
   font-size: 24px;
   font-style: normal;
@@ -424,7 +530,7 @@ summary::-webkit-details-marker {
   margin-bottom: 6px;
 }
 .product__cart__item__pink {
-  color: #EF5B70;
+  color: #F16D7F;
 }
 .product__cart__item__grey {
   color: #6F6E6E;
@@ -448,6 +554,7 @@ summary::-webkit-details-marker {
   height: 306px;
   padding-top: 28px;
   margin-left: 57px;
+  padding-right: 24px;
 }
 
 .checkout {
@@ -462,7 +569,7 @@ summary::-webkit-details-marker {
   gap: 20px;
 }
 .checkout__title {
-  color: #222;
+  color: #222222;
   font-family: Lato;
   font-size: 16px;
   font-style: normal;
@@ -487,7 +594,7 @@ summary::-webkit-details-marker {
 }
 .checkout__input2 {
   padding: 12.5px 17px 15.5px;
-  color: #222;
+  color: #222222;
   font-size: 13px;
   font-style: normal;
   font-weight: 300;
@@ -495,7 +602,7 @@ summary::-webkit-details-marker {
 }
 .checkout__input3 {
   padding: 12.5px 17px 15.5px;
-  color: #222;
+  color: #222222;
   font-size: 13px;
   font-style: normal;
   font-weight: 300;
@@ -536,7 +643,7 @@ summary::-webkit-details-marker {
   margin-bottom: 12px;
 }
 .checkout__grand {
-  color: #222;
+  color: #222222;
   font-size: 16px;
   font-style: normal;
   font-weight: 300;
@@ -562,7 +669,7 @@ summary::-webkit-details-marker {
   width: 273px;
   height: 50px;
   flex-shrink: 0;
-  color: #000;
+  color: #222222;
   font-family: Lato;
   font-size: 14px;
   font-style: normal;
@@ -582,7 +689,7 @@ summary::-webkit-details-marker {
 .cart__btn__box {
   display: flex;
   gap: 192px;
-  margin-bottom: 128px;
+  margin-top: 32px;
 }
 
 .cart__btn {
@@ -590,7 +697,7 @@ summary::-webkit-details-marker {
   background-color: #FFFFFF;
   border-color: #A4A4A4;
   border-style: solid;
-  color: #000;
+  color: #222222;
   font-size: 14px;
   font-style: normal;
   font-weight: 300;
@@ -604,6 +711,247 @@ summary::-webkit-details-marker {
   border-color: #F16D7F;
 }
 
+/* Блок для планшета */
+@media (max-width: 1024px) {
+  .card__checkout {
+    flex-wrap: wrap;
+    gap: 64px;
+    padding-top: 59px;
+  }
+  .checkout {
+    display: flex;
+    align-items: flex-start;
+    gap: 15px;
+  }
+  .checkout__adress {
+    margin-bottom: 0;
+  }
+  .checkout__proceed {
+    margin-top: 38px;
+  }
+  .product__cart__close {
+    margin-left: 137px;
+  }
+  .cart__btn__box {
+    gap: 48px;
+    justify-content: center;
+  }
+  /* Блок для мобильной версии */
+}
+@media (max-width: 1024px) and (min-width: 320px) and (max-width: 767px) {
+  .card__checkout {
+    gap: 48px;
+    padding-bottom: 96px;
+  }
+  .product__cart {
+    gap: 32px;
+  }
+  .product__cart__close {
+    margin-left: 137px;
+  }
+  .product__cart__card {
+    box-shadow: 8px 8px 21px rgba(0, 0, 0, 0.13);
+  }
+  .product__cart__card img {
+    margin-right: 17px;
+    width: 140px;
+    height: 188px;
+  }
+  .product__cart__subtitle {
+    font-size: 14px;
+    margin-bottom: 23px;
+    max-width: 130px;
+  }
+  .product__cart__item {
+    font-size: 12px;
+  }
+  .product__cart__item__col {
+    width: 24.16px;
+    height: 15.328px;
+    flex-shrink: 0;
+  }
+  .product__cart__close {
+    margin-left: 0px;
+    height: 188px;
+    padding-top: 17px;
+    padding-right: 12px;
+  }
+  .product__cart__close svg {
+    width: 9.883px;
+    height: 11.059px;
+  }
+  .cart__btn__box {
+    gap: 9px;
+    margin-top: 0;
+  }
+  .cart__btn {
+    font-size: 10px;
+    padding: 9px 14px;
+  }
+  .checkout {
+    flex-wrap: wrap;
+  }
+  .checkout__input {
+    width: 300px;
+  }
+  .checkout__proceed {
+    padding: 39px 15px 42px 15px;
+  }
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.registration {
+  margin-top: 64px;
+  margin-bottom: 96px;
+  display: flex;
+  gap: 128px;
+}
+
+.contact-info__name {
+  color: #222222;
+  font-family: Lato;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.contact-info__input {
+  display: block;
+  color: #B1B1B1;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-top: 20px;
+  border: 1px solid #A4A4A4;
+  padding: 13px 17px 16px;
+  width: 360px;
+}
+.contact-info__radio {
+  margin-top: 31px;
+  margin-bottom: 31px;
+  display: flex;
+  align-items: center;
+}
+.contact-info__gender {
+  width: 17px;
+  height: 17px;
+  flex-shrink: 0;
+  margin-right: 10px;
+}
+.contact-info__gender + label {
+  color: #222222;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  border: 1px solid #A4A4A4;
+  border: none;
+  margin-right: 20px;
+}
+.contact-info__gender[type=radio] {
+  accent-color: #F16D7F;
+}
+.contact-info__gender:checked {
+  background-color: #F16D7F;
+  background: #F16D7F;
+  color: #F16D7F;
+}
+.contact-info__text {
+  color: #B1B1B1;
+  max-width: 359px;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-top: 15px;
+}
+.contact-info_btn {
+  color: #FFF;
+  font-family: Lato;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding: 16px 20px 17px 29px;
+  background-color: #F16D7F;
+  border: 1px #F16D7F solid;
+  margin-top: 39px;
+  transition: all 0.3s;
+}
+.contact-info_btn:hover {
+  color: #FFF;
+  background-color: #F16D7F;
+  border-color: #FFF;
+}
+.contact-info_btn svg {
+  margin-left: 20px;
+}
+
+.loyalty {
+  color: #222222;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.loyalty__subtitle {
+  color: #222222;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-bottom: 23px;
+}
+.loyalty__text {
+  max-width: 652px;
+  margin-bottom: 22px;
+}
+.loyalty__list {
+  padding-left: 0;
+  list-style-type: none;
+  list-style-image: url(img/Vector.png);
+  margin-left: 23px;
+}
+.loyalty_item {
+  margin-bottom: 16px;
+  padding-left: 23px;
+}
+
+/* Блок для планшета */
+@media (max-width: 1024px) {
+  .registration {
+    margin-top: 40px;
+    gap: 22px;
+  }
+  .loyalty {
+    font-size: 16px;
+  }
+  .loyalty__subtitle {
+    font-size: 16px;
+    margin-bottom: 32px;
+  }
+  .loyalty__text {
+    max-width: 354px;
+  }
+  .loyalty_item {
+    max-width: 310px;
+    margin-bottom: 23px;
+  }
+  /* Блок для мобильной версии */
+}
+@media (max-width: 1024px) and (min-width: 320px) and (max-width: 767px) {
+  .registration {
+    flex-wrap: wrap;
+  }
+  .contact-info__input {
+    width: 300px;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -639,6 +987,10 @@ body {
   gap: 41px;
 }
 
+.header__loupe:hover path {
+  fill: #F16D7F;
+}
+
 .header__right {
   display: flex;
   align-items: center;
@@ -662,8 +1014,16 @@ body {
   transition: right 0.5s;
 }
 
+.dropdown__menu__content a:hover {
+  font-weight: bold;
+}
+
 #btn__dropdown:checked ~ .dropdown__menu__content {
   right: 0;
+}
+
+.btn__dropdown:hover path {
+  fill: #F16D7F;
 }
 
 #btn__dropdown {
@@ -673,7 +1033,7 @@ body {
 }
 
 .dropdown__menu__title {
-  color: #000;
+  color: #222222;
   width: 55px;
   font-size: 14px;
   font-style: normal;
@@ -723,8 +1083,16 @@ body {
   line-height: normal;
 }
 
+.header__link-site:hover path {
+  fill: #F16D7F;
+}
+
 .cart {
   position: relative;
+}
+
+.cart:hover path {
+  fill: #F16D7F;
 }
 
 .number::after {
@@ -766,7 +1134,7 @@ body {
 }
 
 .title {
-  color: #222;
+  color: #222222;
   font-size: 48px;
   font-style: normal;
   font-weight: 900;
@@ -774,7 +1142,7 @@ body {
 }
 
 .top__subtitle {
-  color: #222;
+  color: #222222;
   font-size: 32px;
   font-style: normal;
   font-weight: 700;
@@ -798,6 +1166,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.item__offer:hover {
+  box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
 }
 
 .accesories {
@@ -836,7 +1208,7 @@ body {
 }
 
 .subtitle__products {
-  color: #222;
+  color: #222222;
   font-size: 30px;
   font-style: normal;
   font-weight: 400;
@@ -862,30 +1234,50 @@ body {
 }
 
 .items__products {
+  position: relative;
   background-color: #F8F8F8;
   display: flex;
   flex-direction: column;
 }
 
 .box__img__products {
-  position: relative;
   width: 360px;
   height: 420px;
   transition: all 0.3s;
-}
-
-.img__items__products {
-  position: absolute;
 }
 
 .hover_products {
   display: none;
 }
 
-.items__products:hover .hover_products {
-  position: absolute;
-  display: block;
+.items__products:hover .img__items__products {
+  filter: brightness(0.3);
+}
+
+.items__products:hover .add {
   display: flex;
+}
+
+.add {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+  padding: 10px 14px;
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  border: 1px #FFF solid;
+  display: none;
+}
+.add__text {
+  color: #FFF;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.add:hover {
+  filter: brightness(0.5);
 }
 
 .content__products {
@@ -896,6 +1288,7 @@ body {
 }
 
 .subtitle__items__products {
+  display: block;
   color: #000;
   font-size: 13px;
   font-style: normal;
@@ -921,12 +1314,13 @@ body {
 }
 
 .button__products {
-  color: #F26376;
+  color: #F16D7F;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  border-color: #FF6A6A;
+  border-color: #F16D7F;
+  border-style: solid;
   background: #FFF;
   width: 212px;
   height: 48px;
@@ -953,6 +1347,15 @@ body {
 }
 
 .item__feature {
+  transition: all 0.3s;
+}
+
+.item__feature:hover path {
+  fill: #FBFBFB;
+}
+
+.feature__link {
+  display: block;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -984,7 +1387,9 @@ body {
 /* блок photo-subscribe */
 .top__photo-subscribe {
   background-image: url(img/fon_photo_subscribe.png);
+  background-repeat: no-repeat;
   background-size: cover;
+  background-position: left center;
   padding-top: 97px;
   padding-bottom: 126px;
   display: flex;
@@ -1004,7 +1409,7 @@ body {
 }
 
 .text__photo-subscribe {
-  color: #222224;
+  color: #222222;
   text-align: center;
   font-size: 20px;
   font-style: normal;
@@ -1024,7 +1429,7 @@ body {
 }
 
 .title__photo-subscribe {
-  color: #222224;
+  color: #222222;
   text-align: center;
   font-size: 24px;
   font-style: normal;
@@ -1033,7 +1438,7 @@ body {
 }
 
 .subtitle__photo-subscribe {
-  color: #222224;
+  color: #222222;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -1058,7 +1463,7 @@ body {
   justify-content: center;
   flex-shrink: 0;
   font-family: Lato;
-  color: #222224;
+  color: #222222;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -1084,10 +1489,15 @@ body {
   font-weight: 400;
   line-height: normal;
 }
+.button__email:hover {
+  background-color: #FBFBFB;
+  border: 1px #F16D7F solid;
+  color: #F16D7F;
+}
 
 /* блок footer */
 .footer {
-  background-color: #222224;
+  background-color: #222222;
   padding-top: 24px;
   padding-bottom: 23px;
   display: flex;
@@ -1131,8 +1541,8 @@ body {
 /* Блок для планшета */
 @media (max-width: 1024px) {
   .center {
-    padding-left: calc(50% - 376px);
-    padding-right: calc(50% - 376px);
+    padding-left: calc(50% - 370px);
+    padding-right: calc(50% - 370px);
   }
   .header__logo {
     justify-content: space-between;
