--- a/_cart_style.scss
+++ b/_cart_style.scss
@@ -3,9 +3,9 @@
 
 .card__checkout {
     padding-top: 96px;
-    margin-bottom: 72px;
     display: flex;
     gap: 128px;
+    padding-bottom: 128px;
 }  
   
 .product__cart {
@@ -17,7 +17,7 @@
     &__card {
         display: flex;
         align-items: center;
-        width: 652px;
+        
         box-shadow: (17px 19px 24px rgba(0, 0, 0, 0.13));
     } 
 
@@ -28,7 +28,7 @@
     }
     
     &__subtitle {
-        color: #222;
+        color: $collorTextB;
         max-width: 262px;
         font-size: 24px;
         font-style: normal;
@@ -54,7 +54,7 @@
     }
 
     &__item__pink {
-        color: #EF5B70;
+        color: $colorSite;
     }
 
     &__item__grey {
@@ -81,6 +81,7 @@
         height: 306px;
         padding-top: 28px;
         margin-left: 57px;
+        padding-right: 24px;
     }
 
 }
@@ -100,7 +101,7 @@
     }
 
     &__title {
-        color: #222;
+        color: $collorTextB;
         font-family: Lato;
         font-size: 16px;
         font-style: normal;
@@ -130,7 +131,7 @@
 
     &__input2 {
         padding: 12.5px 17px 15.5px;
-        color: #222;
+        color: $collorTextB;
         font-size: 13px;
         font-style: normal;
         font-weight: 300;
@@ -139,7 +140,7 @@
 
     &__input3 {
         padding: 12.5px 17px 15.5px;
-        color: #222;
+        color: $collorTextB;
         font-size: 13px;
         font-style: normal;
         font-weight: 300;
@@ -164,8 +165,8 @@
 
     &__btn:hover {
         color: #FFF;
-        background-color: #F16D7F;
-        border-color: #F16D7F;
+        background-color: $colorSite;
+        border-color: $colorSite;
     }
 
     &__proceed {
@@ -186,7 +187,7 @@
     }
 
     &__grand {
-        color: #222;
+        color: $collorTextB;
         font-size: 16px;
         font-style: normal;
         font-weight: 300;
@@ -195,7 +196,7 @@
     }
 
     &__grand__price {
-        color: #F16D7F;
+        color: $colorSite;
         font-weight: 700;
         margin-left: 25px;
        
@@ -216,7 +217,7 @@
         width: 273px;
         height: 50px;
         flex-shrink: 0;
-        color: #000;
+        color: $collorTextB;
         font-family: Lato;
         font-size: 14px;
         font-style: normal;
@@ -230,8 +231,8 @@
 
     &_btn:hover {
         color: #FFF;
-        background-color: #F16D7F;
-        border-color: #F16D7F;
+        background-color: $colorSite;
+        border-color: $colorSite;
     }
 
 }
@@ -239,7 +240,7 @@
 .cart__btn__box {
     display: flex;
     gap: 192px;
-    margin-bottom: 128px;
+    margin-top: 32px;
 }
 
 .cart__btn {
@@ -247,7 +248,7 @@
     background-color: #FFFFFF;
     border-color: #A4A4A4;
     border-style: solid;
-    color: #000;
+    color: $collorTextB;
     font-size: 14px;
     font-style: normal;
     font-weight: 300;
@@ -257,6 +258,110 @@
 
 .cart__btn:hover {
     color: #FFF;
-    background-color: #F16D7F;
-    border-color: #F16D7F;
+    background-color: $colorSite;
+    border-color: $colorSite;
+}
+
+/* Блок для планшета */
+
+@media (max-width: 1024px) {
+
+    .card__checkout {
+        flex-wrap: wrap;
+        gap: 64px;
+        padding-top: 59px;
+    }
+
+    .checkout {
+        display: flex;
+        align-items: flex-start;
+        gap: 15px;
+
+        &__adress {
+            margin-bottom: 0;
+        }
+        &__proceed {
+            margin-top: 38px;
+        }
+    }
+    .product__cart {
+        
+        &__close {
+            margin-left: 137px;
+        }
+    }
+    .cart__btn__box {
+        gap: 48px;
+        justify-content: center;
+    }
+
+
+     /* Блок для мобильной версии */
+
+    @media (min-width: 320px) and (max-width: 767px) {
+        .card__checkout{
+            gap: 48px;
+            padding-bottom: 96px;
+        }
+        .product__cart {
+            gap: 32px;
+            &__close {
+                margin-left: 137px;
+            }
+            &__card {
+                box-shadow: 8px 8px 21px rgba(0, 0, 0, 0.13);
+            }
+            &__card img {
+                margin-right: 17px;
+                width: 140px;
+                height: 188px;
+            }
+            &__subtitle {
+                font-size: 14px; 
+                margin-bottom: 23px;
+                max-width: 130px;
+            }
+            &__item {
+                font-size: 12px;
+                &__col {
+                    width: 24.16px;
+                    height: 15.328px;
+                    flex-shrink: 0;
+                }
+            }
+            &__close {
+                
+                margin-left: 0px;
+                height: 188px;
+                padding-top: 17px;
+                padding-right: 12px;
+               & svg {
+                width: 9.883px;
+                height: 11.059px;
+
+               }
+            }
+        }
+
+        .cart__btn__box {
+            gap: 9px;
+            margin-top: 0;
+
+        }
+        .cart__btn {
+            font-size: 10px;
+            padding: 9px 14px;
+        }
+
+        .checkout {
+            flex-wrap: wrap;
+            &__input {
+                width: 300px;
+            }
+            &__proceed {
+                padding: 39px 15px 42px 15px; 
+            }
+        }
+        
+    }
 }
