--- a/_product_style.scss
+++ b/_product_style.scss
@@ -1,133 +1,5 @@
 @import "variable";
-// @import "style";
 
-// * {
-//     margin: 0;
-//     padding: 0;
-// }
-
-// a {
-//     text-decoration: none;
-// }
-
-// body {
-//     font-family: 'Lato', sans-serif;
-    
-// }
-
-// .center {
-//     padding-left: calc(50% - $widthSite / 2);
-//     padding-right: calc(50% - $widthSite / 2);
-// }
-
-// .header {
-//     background-color: #222222;
-//     &__logo {
-//         display: flex;
-//         justify-content: space-between;
-//         padding-top: 18px;
-//         padding-bottom: 19px;
-    
-//     }
-    
-//     &__logo_left {
-//         display: flex;
-//         align-items: center;
-//         gap: 41px;
-//     }
-    
-//     &__right {
-//         display: flex;
-//         align-items: center;
-//         gap: 25px;
-//     }
-
-// }
-
-// .dropdown__menu {
-//     transition: all 0.3s;
-// }
-
-// .dropdown__menu__btn {
-//     background-color: #222222;
-//     border: none;
-// }
-
-// .dropdown__menu__content {
-//     display: none;
-//     width: 232px;
-//     height: 634px;
-//     background: #FFF;
-//     position: absolute;
-//     z-index: 10;
-//     padding-top: 32px;
-//     top: 75px;
-//     right: 0;
-// }
-
-
-// .dropdown__menu:hover .dropdown__menu__content {
-//     display: block;
-
-// }
-
-// .dropdown__menu__title {
-//     color: #000;
-//     width: 55px;
-//     font-size: 14px;
-//     font-style: normal;
-//     font-weight: 700;
-//     line-height: normal;
-//     margin-left: 33px; 
-//     margin-bottom: 24px;
-    
-
-// }
-
-// .title_menu {
-//     list-style: none;
-//     margin-left: 32px; 
-    
-
-// }
-
-// .title_name {
-//     margin-bottom: 12px;
-// }
-
-// .title_name__link {
-//     color: $colorSite;
-//     width: 55px;
-//     font-size: 14px;
-//     font-style: normal;
-//     font-weight: 400;
-//     line-height: normal;
-    
-
-// }
-
-// .menu__section {
-//     list-style: none;
-//     margin-left: 21.5px; 
-    
-// }
-
-// .name__section {
-//     margin-bottom: 11px;
-// }
-
-// .name__section:last-child {
-//     margin-bottom: 20px;
-// }
-
-// .name__section__link {
-//     color: #6F6E6E;
-//     width: 79.4px;
-//     font-size: 14px;
-//     font-style: normal;
-//     font-weight: 400;
-//     line-height: normal; 
-// }
 
 // блок breadcrumb
 
@@ -155,7 +27,7 @@
         
     }
 
-    &__nav li+li::before {
+    &__name:not(:last-child)::after {
         content: "/";
         color: #636363;
         padding-right: 4px;
@@ -176,6 +48,10 @@
         line-height: normal;
     }
 
+    &__name:hover a{
+        color: $colorSite;
+    }
+
     &__name__sub {
         color: $colorSite;
         font-size: 14px;
@@ -185,26 +61,25 @@
     }
 }
 
-// блок image__slide
+// блок slider
 
-// .image__slide{}
+.slider{
+    padding-top: 10px;
+    padding-bottom: 42px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #F7F7F7;
 
-.carousel-control-prev-icon {
-    background-image: url(img/prev.svg);
-}
+    &__btn {
+        padding: 8px;
+        background-color: #2A2A2A26;
+        transition: all 0.3s;
+    }
 
-.carousel-control-next-icon {
- background-image: url(img/next.svg);
-}
-
-.carousel-control-next {
-    opacity: 1;
-    justify-content: flex-end;
-}
-
-.carousel-control-prev {
-    opacity: 1;
-    justify-content: flex-start;
+    &__btn:hover path {
+        fill:$colorSite
+    }
 }
 
 // блок product_description
@@ -229,6 +104,7 @@
     padding-top: 64px;
     padding-bottom: 64px;
     margin-bottom: 129px;
+    border: 1px #EAEAEA solid;
     
     &__subtitle-ping {
         margin-bottom: 12px;
@@ -289,7 +165,7 @@
         width: 212px;
         height: 48.406px;
         flex-shrink: 0;
-        border-color: $colorSite;
+        border: 1px $colorSite solid;
         display: flex;
         align-items: center;
         gap: 23px;
@@ -301,7 +177,7 @@
 
         &__text {
             margin-bottom: 0;
-            color: #F26376;
+            color: $colorSite;
             font-size: 16px;
             font-style: normal;
             font-weight: 400;
@@ -312,22 +188,26 @@
 
     &__button:hover {
         background-color: $colorSite;
-        color: #FFFFFF;
+        color: $collorTextW;
         border: none;
         
     }
 
     &__button:hover .product__description__button__text{ 
-        color: #FFFFFF;
+        color: $collorTextW;
     }
     &__button:hover path{
-        fill: #FFFFFF;        
+        fill: $collorTextW;        
     }
 
 }
 
 
 // блок products
+
+.top__product {
+    margin-bottom: 128px;
+}
 
 .box__products {
     margin-bottom: 128px;
@@ -396,153 +276,91 @@
     line-height: normal;
 }
 
-/* блок photo-subscribe */
+/* Блок для планшета */
 
-// .top__photo-subscribe {
-//     background-image: url(img/fon_photo_subscribe.png);
-//     background-size: cover;
-//     padding-top: 97px;
-//     padding-bottom: 126px;
-//     display: flex;
-//     flex-wrap: wrap;
-//     justify-content: space-between;
-//     align-items: center;
-// }
+@media (max-width: 1024px) {
+    .box {
+        position: static;
+        margin-bottom: 129px;
+    }
 
-// .photo-subscribe__left {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-// }
+    .product__description {
+        // position: ;
+    }
 
-// .img__photo-subscribe {
-//     margin-bottom: 30px;
-// }
+    .box__products {
+        flex-direction: row-reverse;
+    }
 
-// .text__photo-subscribe {
-//     color: #222224;
-//     text-align: center;
-//     font-size: 20px;
-//     font-style: normal;
-//     font-weight: 400;
-//     line-height: normal;
-//     max-width: 360px;
-// }
+    .items__products:last-child{
+        display: none;
+    }
 
-// .ital__text__photo-subscribe {
-//     font-style: italic;
-// }
+    /* Блок для мобильной версии */
 
-// .photo-subscribe__right {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-// }
+    @media (min-width: 320px) and (max-width: 767px) {
+        .breadcrumb {
+           gap: 32px; 
+           justify-content: center;
+           padding-top: 24px;
+           padding-bottom: 46px;
+        }
 
-// .title__photo-subscribe {
-//     color: #222224;
-//     text-align: center;
-//     font-size: 24px;
-//     font-style: normal;
-//     font-weight: 700;
-//     line-height: 167.2%;
-// }
+        .slider {
+            position: relative;
+            padding-top: 85px;
+            padding-bottom: 85px;
+            justify-content: center;
+        }
 
-// .subtitle__photo-subscribe {
-//     color: #222224;
-//     font-size: 18px;
-//     font-style: normal;
-//     font-weight: 400;
-//     line-height: 167.2%;
-//     margin-bottom: 32px;
-// }
+        .slider__img img{
+            max-width: 374px;
+            max-height: 454px;
 
-// .box__email {
-//     display: flex;
-// }
+        }
 
-// .email {
-//     border-radius: 25px 0 0 25px;
-//     border: none;
-//     padding-left: 22px;
-//     padding-right: 22px;
-//     background-color: #E1E1E1;
-//     display: flex;
-//     width: 230px;
-//     height: 49px;
-//     flex-direction: column;
-//     justify-content: center;
-//     flex-shrink: 0;
-//     font-family: Lato;
-//     color: #222224;
-//     font-size: 14px;
-//     font-style: normal;
-//     font-weight: 400;
-//     line-height: normal;
-// }
+        .slider__btn {
+            position: absolute;
 
-// .button__email {
-//     border-radius: 0 25px 25px 0;
-//     background-color: $colorSite;
-//     border: none;
-//     display: flex;
-//     width: 100px;
-//     height: 49px;
-//     flex-direction: column;
-//     justify-content: center;
-//     flex-shrink: 0;
-//     color: #FFF;
-//     align-items: center;
-//     text-align: center;
-//     font-family: Lato;
-//     font-size: 14px;
-//     font-style: normal;
-//     font-weight: 400;
-//     line-height: normal;
-// }
+            &_1 {
+                left: 0;
+            }
 
-// /* блок footer */
+            &_2 {
+                right: 0;
+            }
+        }
 
-// .footer {
-//     background-color: #222224;
-//     padding-top: 24px;
-//     padding-bottom: 23px;
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-// }
+        .box {
+            
+        }
 
-// .text__footer {
-//     color: #FBFBFB;
-//     font-size: 16px;
-//     font-style: normal;
-//     font-weight: 400;
-//     line-height: normal;
-// }
+        .product__description {
+            // position: relative;
+            margin-bottom: 64px;
 
-// .box__links {
-//     display: flex;
-//     gap: 7.5px;
-// }
+            &__text {
+                max-width: 300px;
+            }
+        }
 
-// .link {
-//     display: block;
-//     width: 31.451px;
-//     height: 32px;
-//     flex-shrink: 0;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     background-color: #FFFFFF;
-//     transition: all 0.3s;
-// }
+        .product__description__sort {
+            gap: 25px;
+            &__select {
+                font-size: 10px;
+            }
 
-// .link:hover {
-//     background-color: $colorSite;
-    
-// }
+            &__svg {
+                width: 175px;
+            }
+        }
 
-// .link:hover path {
-//     fill: #FFFFFF;
-// }
+        .__subtitle {
+            margin-bottom: 32px;
+        }
 
+        .top__product {
+            margin-bottom: 64px;
+        }
+    }
+}
